# Projekt_AiSD2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: lint.yml  tests.yml
docs/: CMakeLists.txt  custom.css  mainpage.md
report/: bibliography.bib  report.tex
src/: CMakeLists.txt  test_lib.cpp  test_lib.h
src/bipartite_maximum_matching_lib/: CMakeLists.txt  bipartite_maximum_matching.cpp  bipartite_maximum_matching.h  bipartite_maximum_matching.hpp
src/convex_hull_lib/: CMakeLists.txt  convex_hull.cpp  convex_hull.hpp
src/data_compression_lib/: CMakeLists.txt  data_compression.cpp  data_compression.h  data_compression.hpp
src/dynamic_optimal_path_lib/: CMakeLists.txt  dynamic_optimal_path.cpp  dynamic_optimal_path.h  dynamic_optimal_path.hpp
src/fence_logistics_bin/: CMakeLists.txt  main.cpp  readme.md  readme.txt
src/patrole_bin/: CMakeLists.txt  main.cpp  readme.md
src/pattern_matching_lib/: CMakeLists.txt  pattern_matching.cpp  pattern_matching.hpp
src/sssp_plane_lib/: CMakeLists.txt  sssp_plane.cpp  sssp_plane.hpp
src/test_lib/: test_lib.cpp
src/tragarze_bin/: CMakeLists.txt  main.cpp  readme.md  readme.txt  tragarze.cpp
src/zapis_melodii_bin/: CMakeLists.txt  reader.cpp  readme.md  writer.cpp
test/: CMakeLists.txt  bipartite_maximum_matching_test.cpp  convex_hull_test.cpp  data_compression_test.cpp  dynamic_optimal_path.cpp  dynamic_optimal_path_test.cpp  pattern_matching_test.cpp  sssp_plane_test.cpp  test.cpp  test_lib_test.cpp
test/ConvexHull/: convex_hull_test.cpp
test/input_data/: bipartite_maximum_matching_large.txt  bipartite_maximum_matching_medium.txt
ui/: convex_hull.html
ui/api/: index.js  package-lock.json  package.json
ui/css/: convex_hull.css
ui/frontend/: README.md  index.html  package-lock.json  package.json
ui/frontend/src/: App.vue
ui/frontend/src/components/: Stage.vue
ui/frontend/src/stageObjects/: StageEllipse.ts  StageGraph.ts  types.ts
ui/js/: convex_hull.js
